--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/style.css" />
-		<title>YT AV</title>
+		<title>YT Media Downloader</title>
 	</head>
 
 	<body>
