--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,14 @@
 			<h1 id="brand">YouTube Media Downloader</h1>
 
 			<form action="/getdata" method="POST" id="form">
-				<input type="url" name="videoURL" id="videoURL" required autofocus />
+				<input
+					type="url"
+					name="videoURL"
+					id="videoURL"
+					placeholder="Enter a YouTube Link"
+					required
+					autofocus
+				/>
 				<button type="submit" id="download">Get Links</button>
 			</form>
 		</main>
